core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/ZVC__Zoom_Meeting__c.object-meta.xml
<CustomObject>
    <label>Zoom Meeting</label>
    <nameField>
        <displayFormat>Zoom-Meeting-{0000}</displayFormat>
        <label>Zoom-Meeting-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>