core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Additional_Emails__c</fullName>
    <inlineHelpText>Enter email addresses of all other participants separated by a comma [,].</inlineHelpText>
    <label>Enter Email Address of Attendees</label>
    <type>TextArea</type>
</CustomField>