core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Duration_mins__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Duration_mins__c</fullName>
    <label>Duration (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>