core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__External_Invitees__c.field-meta.xml
<CustomField>
    <fullName>ZVC__External_Invitees__c</fullName>
    <label>External Invitees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>