core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__External_Participants__c.field-meta.xml
<CustomField>
    <fullName>ZVC__External_Participants__c</fullName>
    <label>External Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>