core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Host_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Host_Id__c</fullName>
    <label>Host Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>