core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Invitees_by_Emails__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Invitees_by_Emails__c</fullName>
    <label>Invitees by Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>