core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__IsExternal__c.field-meta.xml
<CustomField>
    <fullName>ZVC__IsExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExternal</label>
    <type>Checkbox</type>
</CustomField>