core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__IsZoomMeeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__IsZoomMeeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsZoomMeeting</label>
    <type>Checkbox</type>
</CustomField>