core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__join_before_host__c.field-meta.xml
<CustomField>
    <fullName>ZVC__join_before_host__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Let users join the meeting before the host arrives</inlineHelpText>
    <label>Enable join before host</label>
    <type>Checkbox</type>
</CustomField>