core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Meeting_AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Meeting_AI_Summary__c</fullName>
    <label>Meeting AI Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>