core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Meeting_Topic__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Meeting_Topic__c</fullName>
    <label>Meeting Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>