core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>