core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Occurrence_Id__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Occurrence_Id__c</fullName>
    <label>Recurring Meeting Occurrence id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>