core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Parent_Recurring_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Parent_Recurring_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Recurring Meeting</label>
    <referenceTo>ZVC__Zoom_Meeting__c</referenceTo>
    <relationshipLabel>Recurring Zoom Meetings</relationshipLabel>
    <relationshipName>Recurring_Zoom_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>