core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Participant_Count__c</fullName>
    <label>Participant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>