core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Participants__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Participants__c</fullName>
    <label>Participants</label>
    <type>TextArea</type>
</CustomField>