core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Participants_by_Emails__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Participants_by_Emails__c</fullName>
    <label>Participants by Emails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>