core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Recurring_Rule__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Recurring_Rule__c</fullName>
    <label>Recurring Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>