core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>