core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Start_Url__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Start_Url__c</fullName>
    <label>Start Url</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>