core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Use_personal_meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Use_personal_meeting_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use my Zoom personal meeting id</inlineHelpText>
    <label>Use personal meeting ID</label>
    <type>Checkbox</type>
</CustomField>