core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Zoom_Meeting_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting_Creation_Status__c</fullName>
    <label>Zoom Meeting Creation Status</label>
    <type>TextArea</type>
</CustomField>