core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Zoom_Meeting_Passcode__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting_Passcode__c</fullName>
    <label>Zoom Meeting Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>