core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Zoom_Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting_Start_Time__c</fullName>
    <label>Zoom Meeting Start Time</label>
    <type>DateTime</type>
</CustomField>