core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/fields/ZVC__Zoom_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Status__c</fullName>
    <label>Zoom Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>