core/unpackaged/main/default/objects/ZVC__Zoom_Meeting__c/listViews/ZVC__All.listView-meta.xml
<ListView>
    <fullName>ZVC__All</fullName>
    <columns>NAME</columns>
    <columns>ZVC__Zoom_Meeting_Id__c</columns>
    <columns>ZVC__Zoom_Status__c</columns>
    <columns>ZVC__Meeting_Topic__c</columns>
    <columns>ZVC__IsZoomMeeting__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ZVC__Participant_Count__c</columns>
    <columns>ZVC__Start_Url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>